Fixed | Spacing issues and Added | toggle feature back to all

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -81,11 +81,12 @@ footer ul {
   margin: 0;
   padding: 0;
   padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 #slick {
   margin: calc(45px - 1rem);
-  height: 766px;
+  min-height: 400px;
 }
 
 .slick-prev, .slick-next {
